@@ -6,9 +6,11 @@ import fr.insee.genesis.controller.responses.SurveyUnitUpdateSimplified;
 import fr.insee.genesis.controller.service.SurveyUnitQualityService;
 import fr.insee.genesis.controller.service.VolumetryLogService;
 import fr.insee.genesis.controller.utils.ControllerUtils;
+import fr.insee.genesis.domain.dtos.CampaignWithQuestionnaire;
 import fr.insee.genesis.domain.dtos.CollectedVariableDto;
 import fr.insee.genesis.domain.dtos.DataState;
 import fr.insee.genesis.domain.dtos.Mode;
+import fr.insee.genesis.domain.dtos.QuestionnaireWithCampaign;
 import fr.insee.genesis.domain.dtos.SurveyUnitId;
 import fr.insee.genesis.domain.dtos.SurveyUnitUpdateDto;
 import fr.insee.genesis.domain.dtos.VariableDto;
@@ -35,6 +37,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Stream;
 
 class ResponseControllerTest {
@@ -88,15 +91,17 @@ class ResponseControllerTest {
 
         //Test file management
         //Clean DONE folder
-        if (Path.of(TestConstants.TEST_RESOURCES_DIRECTORY).resolve("DONE").toFile().exists())
-            Files.walk(Path.of(TestConstants.TEST_RESOURCES_DIRECTORY).resolve("DONE"))
+        Path testResourcesPath = Path.of(TestConstants.TEST_RESOURCES_DIRECTORY);
+        if (testResourcesPath.resolve("DONE").toFile().exists())
+            Files.walk(testResourcesPath.resolve("DONE"))
                     .sorted(Comparator.reverseOrder())
                     .map(Path::toFile)
                     .forEach(File::delete);
 
         //Recreate data files
         //SAMPLETEST-PARADATA-v1
-        if (!Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+        //Root
+        if (!testResourcesPath
                 .resolve("IN")
                 .resolve("WEB")
                 .resolve("SAMPLETEST-PARADATA-v1")
@@ -104,34 +109,75 @@ class ResponseControllerTest {
                 .toFile().exists()
         ){
             Files.copy(
-                    Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v1")
                             .resolve("reponse-platine")
                             .resolve("data.complete.partial.STPDv1.20231122164209.xml")
-                    , Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    , testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v1")
                             .resolve("data.complete.partial.STPDv1.20231122164209.xml")
             );
             Files.copy(
-                    Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v1")
                             .resolve("reponse-platine")
                             .resolve("data.complete.validated.STPDv1.20231122164209.xml")
-                    , Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    , testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v1")
                             .resolve("data.complete.validated.STPDv1.20231122164209.xml")
             );
         }
+        //Differential data
+        if (!testResourcesPath
+                .resolve("IN")
+                .resolve("WEB")
+                .resolve("SAMPLETEST-PARADATA-v1")
+                .resolve("differential")
+                .resolve("data")
+                .resolve("data.complete.validated.STPDv1.20231122164209.xml")
+                .toFile().exists()
+        ) {
+            Files.copy(
+                    testResourcesPath
+                            .resolve("IN")
+                            .resolve("WEB")
+                            .resolve("SAMPLETEST-PARADATA-v1")
+                            .resolve("reponse-platine")
+                            .resolve("data.complete.partial.STPDv1.20231122164209.xml")
+                    , testResourcesPath
+                            .resolve("IN")
+                            .resolve("WEB")
+                            .resolve("SAMPLETEST-PARADATA-v1")
+                            .resolve("differential")
+                            .resolve("data")
+                            .resolve("data.complete.partial.STPDv1.20231122164209.xml")
+            );
+            Files.copy(
+                    testResourcesPath
+                            .resolve("IN")
+                            .resolve("WEB")
+                            .resolve("SAMPLETEST-PARADATA-v1")
+                            .resolve("reponse-platine")
+                            .resolve("data.complete.validated.STPDv1.20231122164209.xml")
+                    , testResourcesPath
+                            .resolve("IN")
+                            .resolve("WEB")
+                            .resolve("SAMPLETEST-PARADATA-v1")
+                            .resolve("differential")
+                            .resolve("data")
+                            .resolve("data.complete.validated.STPDv1.20231122164209.xml")
+            );
+        }
         //SAMPLETEST-PARADATA-v2
-        if (!Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+        if (!testResourcesPath
                 .resolve("IN")
                 .resolve("WEB")
                 .resolve("SAMPLETEST-PARADATA-v2")
@@ -139,26 +185,26 @@ class ResponseControllerTest {
                 .toFile().exists()
         ){
             Files.copy(
-                    Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v2")
                             .resolve("reponse-platine")
                             .resolve("data.complete.partial.STPDv2.20231122164209.xml")
-                    , Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    , testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v2")
                             .resolve("data.complete.partial.STPDv2.20231122164209.xml")
             );
             Files.copy(
-                    Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v2")
                             .resolve("reponse-platine")
                             .resolve("data.complete.validated.STPDv2.20231122164209.xml")
-                    , Path.of(TestConstants.TEST_RESOURCES_DIRECTORY)
+                    , testResourcesPath
                             .resolve("IN")
                             .resolve("WEB")
                             .resolve("SAMPLETEST-PARADATA-v2")
@@ -290,9 +336,9 @@ class ResponseControllerTest {
 
         Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
         Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty();
-        Assertions.assertThat(response.getBody().get(0).getIdUE()).isEqualTo("TESTIDUE");
-        Assertions.assertThat(response.getBody().get(0).getIdQuest()).isEqualTo("TESTIDQUESTIONNAIRE");
-        Assertions.assertThat(response.getBody().get(0).getFileDate()).hasMonth(Month.FEBRUARY);
+        Assertions.assertThat(response.getBody().getFirst().getIdUE()).isEqualTo("TESTIDUE");
+        Assertions.assertThat(response.getBody().getFirst().getIdQuest()).isEqualTo("TESTIDQUESTIONNAIRE");
+        Assertions.assertThat(response.getBody().getFirst().getFileDate()).hasMonth(Month.FEBRUARY);
     }
 
     @Test
@@ -342,13 +388,84 @@ class ResponseControllerTest {
     }
 
     @Test
+    void getCampaignsTest() {
+        addAdditionnalDtoToMongoStub("TESTCAMPAIGN2","TESTQUESTIONNAIRE2");
+
+        ResponseEntity<Set<String>> response = responseControllerStatic.getCampaigns();
+
+        Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
+        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty().containsExactly(
+                "TESTIDCAMPAIGN","TESTCAMPAIGN2");
+    }
+
+    @Test
+    void getQuestionnairesTest() {
+        addAdditionnalDtoToMongoStub("TESTQUESTIONNAIRE2");
+
+        ResponseEntity<Set<String>> response = responseControllerStatic.getQuestionnaires();
+
+        Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
+        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty().containsExactly(
+                "TESTIDQUESTIONNAIRE","TESTQUESTIONNAIRE2");
+    }
+
+    @Test
     void getQuestionnairesByCampaignTest() {
         addAdditionnalDtoToMongoStub("TESTQUESTIONNAIRE2");
 
-        ResponseEntity<List<String>> response = responseControllerStatic.getQuestionnairesByCampaign("TESTIDCAMPAIGN");
+        ResponseEntity<Set<String>> response = responseControllerStatic.getQuestionnairesByCampaign("TESTIDCAMPAIGN");
 
         Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
-        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty().hasSize(2);
+        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty().containsExactly(
+                "TESTIDQUESTIONNAIRE","TESTQUESTIONNAIRE2");
+    }
+
+    @Test
+    void getCampaignsWithQuestionnairesTest() {
+        addAdditionnalDtoToMongoStub("TESTQUESTIONNAIRE2");
+        addAdditionnalDtoToMongoStub("TESTCAMPAIGN2","TESTQUESTIONNAIRE2");
+
+        ResponseEntity<List<CampaignWithQuestionnaire>> response = responseControllerStatic.getCampaignsWithQuestionnaires();
+
+        Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
+        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty();
+        Assertions.assertThat(response.getBody().stream().filter(campaignWithQuestionnaire ->
+                        campaignWithQuestionnaire.getIdCampaign().equals("TESTIDCAMPAIGN")
+                                || campaignWithQuestionnaire.getIdCampaign().equals("TESTCAMPAIGN2")
+        )).isNotNull().isNotEmpty().hasSize(2);
+
+        Assertions.assertThat(response.getBody().stream().filter(
+                campaignWithQuestionnaire -> campaignWithQuestionnaire.getIdCampaign().equals("TESTIDCAMPAIGN")
+        ).findFirst().get().getQuestionnaires()).containsExactly("TESTIDQUESTIONNAIRE", "TESTQUESTIONNAIRE2");
+
+        Assertions.assertThat(response.getBody().stream().filter(
+                campaignWithQuestionnaire -> campaignWithQuestionnaire.getIdCampaign().equals("TESTCAMPAIGN2")
+        ).findFirst().get().getQuestionnaires()).containsExactly("TESTQUESTIONNAIRE2");
+    }
+
+    @Test
+    void getQuestionnairesWithCampaignsTest() {
+        addAdditionnalDtoToMongoStub("TESTQUESTIONNAIRE2");
+        addAdditionnalDtoToMongoStub("TESTCAMPAIGN2","TESTQUESTIONNAIRE2");
+
+        ResponseEntity<List<QuestionnaireWithCampaign>> response = responseControllerStatic.getQuestionnairesWithCampaigns();
+
+        Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
+
+        Assertions.assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
+        Assertions.assertThat(response.getBody()).isNotNull().isNotEmpty();
+        Assertions.assertThat(response.getBody().stream().filter(questionnaireWithCampaign ->
+                questionnaireWithCampaign.getIdQuestionnaire().equals("TESTIDQUESTIONNAIRE")
+                        || questionnaireWithCampaign.getIdQuestionnaire().equals("TESTQUESTIONNAIRE2")
+        )).isNotNull().isNotEmpty().hasSize(2);
+
+        Assertions.assertThat(response.getBody().stream().filter(
+                questionnaireWithCampaign -> questionnaireWithCampaign.getIdQuestionnaire().equals("TESTIDQUESTIONNAIRE")
+        ).findFirst().get().getCampaigns()).containsExactly("TESTIDCAMPAIGN");
+
+        Assertions.assertThat(response.getBody().stream().filter(
+                questionnaireWithCampaign -> questionnaireWithCampaign.getIdQuestionnaire().equals("TESTQUESTIONNAIRE2")
+        ).findFirst().get().getCampaigns()).containsExactly("TESTIDCAMPAIGN", "TESTCAMPAIGN2");
     }
 
     @Test
